#95: Report changes optionally

--- a/swagger-brake/src/main/resources/htmlreporter/swagger-brake.mustache
+++ b/swagger-brake/src/main/resources/htmlreporter/swagger-brake.mustache
@@ -1,8 +1,11 @@
 <html>
 <head>
     <title>Analysis result</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
     <style>
         #main-container {
             padding: 10px;
@@ -11,52 +14,77 @@
         }
     </style>
 </head>
-    <body>
-        <div id="main-container">
-            <header>
-                {{#info.title}}
-                    <b>API title:</b> {{info.title}}
-                    <br>
-                {{/info.title}}
-                {{#info.description}}
-                    <b>Description:</b> {{info.description}}
-                    <br>
-                {{/info.description}}
-                {{#info.version}}
-                    <b>Version:</b> {{info.version}}
-                    <br>
-                {{/info.version}}
-                {{#data.breakingChanges.size}}
-                    <div class="alert alert-danger">API is not backward compatible</div>
-                {{/data.breakingChanges.size}}
-                {{^data.breakingChanges.size}}
-                    <div class="alert alert-success">API is backward compatible</div>
-                {{/data.breakingChanges.size}}
-            </header>
-            <main id="breaking-changes-container">
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <th>Rule code</th>
-                            <th>Path</th>
-                            <th>Method</th>
-                            <th>Name</th>
-                            <th>Details</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {{#data.breakingChanges}}
-                        <tr>
-                            <td>{{ruleCode}}</td>
-                            <td>{{path}}</td>
-                            <td>{{method}}</td>
-                            <td>{{name}}</td>
-                            <td>{{message}}</td>
-                        </tr>
-                    {{/data.breakingChanges}}
-                    </tbody>
-                </table>
-            </main>
-        </div>
-    </body>
+<body>
+<div id="main-container">
+    <header>
+        {{#info.title}}
+            <b>API title:</b> {{info.title}}
+            <br>
+        {{/info.title}}
+        {{#info.description}}
+            <b>Description:</b> {{info.description}}
+            <br>
+        {{/info.description}}
+        {{#info.version}}
+            <b>Version:</b> {{info.version}}
+            <br>
+        {{/info.version}}
+        {{#data.breakingChanges.size}}
+            <div class="alert alert-danger">API is not backward compatible</div>
+        {{/data.breakingChanges.size}}
+        {{^data.breakingChanges.size}}
+            <div class="alert alert-success">API is backward compatible</div>
+        {{/data.breakingChanges.size}}
+    </header>
+    <main id="breaking-changes-container">
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>Rule code</th>
+                <th>Path</th>
+                <th>Method</th>
+                <th>Name</th>
+                <th>Details</th>
+            </tr>
+            </thead>
+            <tbody>
+            {{#data.breakingChanges}}
+                <tr>
+                    <td>{{ruleCode}}</td>
+                    <td>{{path}}</td>
+                    <td>{{method}}</td>
+                    <td>{{name}}</td>
+                    <td>{{message}}</td>
+                </tr>
+            {{/data.breakingChanges}}
+            </tbody>
+        </table>
+        {{^data.ignoredBreakingChanges.size}}
+            <h2>Ignored breaking changes:</h2>
+            <table class="table table-bordered table-striped">
+                <thead>
+                <tr>
+                    <th>Rule code</th>
+                    <th>Path</th>
+                    <th>Method</th>
+                    <th>Name</th>
+                    <th>Details</th>
+                </tr>
+                </thead>
+                <tbody>
+                {{#data.ignoredBreakingChanges}}
+                    <tr>
+                        <td>{{ruleCode}}</td>
+                        <td>{{path}}</td>
+                        <td>{{method}}</td>
+                        <td>{{name}}</td>
+                        <td>{{message}}</td>
+                    </tr>
+                {{/data.ignoredBreakingChanges}}
+                </tbody>
+            </table>
+        {{/data.ignoredBreakingChanges.size}}
+    </main>
+</div>
+</body>
 </html>
